2001-06-30 Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c (cb_double_click): hook up to double click.
	Now toggles infoview

	* interface.c (toggle_infoview): toggles infoview. Beginning of 
	pulling stuff out of callbacks.c to access gtk widgets as global
	variables.