@@ -1,5 +1,15 @@
 2001-06-30 Kevin Vandersloot <kfv101@psu.edu>
 
+	*interface.c (update_sensitivity): more movement of code
+	to interface.c.
+
+	*callbacks.c (cb_table_slected): use update_sensitivity. Move 
+	cb_update_selected_row into cb_table_selected.
+	
+	*proctable.c: remove some unused variables, fix up %cpu.
+
+2001-06-30 Kevin Vandersloot <kfv101@psu.edu>
+
 	* callbacks.c (cb_double_click): hook up to double click.
 	Now toggles infoview
 
